...
                    .windowInsetsPadding(WindowInsets.navigationBars)
                    .padding(start = 30.dp, bottom = 20.dp, end = 30.dp),
            ) {
                if (pagerState.currentPage == pages.lastIndex) {

                    PrimaryButton(
                        text = "Get Started",
                        showBox = true,
                        modifier = Modifier
                            .fillMaxWidth(),
                        textStyle = MaterialTheme.typography.titleSmall,
                        onClick = onOnboardingFinished
                    )
...
                                containerColor = SecondaryGreen,
                                contentColor = PrimaryGreen
                            ),
                            elevation = ButtonDefaults.buttonElevation(0.dp)
                        ) {
                            Text(
                                text = "Skip",
                                style = MaterialTheme.typography.titleSmall
                            )
                        }
                        Spacer(modifier = Modifier.width(16.dp))

                        PrimaryButton(
...
